(fix) scrollbar appear douring the navbar animation

--- a/src/App/assets/scss/styles.scss
+++ b/src/App/assets/scss/styles.scss
@@ -223,6 +223,11 @@ a.card {
 }
 
 // NAVBAR
+html {
+  // temporary fix to hice the horizontal
+  // scrollbar douring the transition
+  overflow-x: hidden;
+}
 .navbar .navbar-nav .nav-item {
   font-weight: inherit;
 }
